--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "@types/crypto-js": "^3.1.39",
+    "cordova-plugin-whitelist": "^1.3.3",
     "crypto-js": "^3.1.9-1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -37,5 +38,10 @@
     "@ionic/app-scripts": "3.1.9",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {}
+    }
+  }
 }
